GMS-116 Fix of failing functions